--- a/_config.yml
+++ b/_config.yml
@@ -15,8 +15,8 @@ search_enabled: true
 
 # Aux links for the upper right navigation
 aux_links:
-  "Docker":
-    - "https://github.com/AOT-Technologies/forms-flow-installation-doc"
+  "Back to Home":
+    - "/forms-flow-installation-doc/"
 
 
 
